fix: gap in rem

--- a/host/src/App.module.css
+++ b/host/src/App.module.css
@@ -6,5 +6,5 @@
     "main"
     "footer";
   grid-template-rows: min-content 1fr min-content;
-  gap: 8px;
+  gap: 1rem;
 }
